from ucommon 5.3.0 to 5.3.1
- cleanup for ide use.
- NamedList sort uses system collation.
- some convenience string methods added.
- search and replace, regular expression support.

from ucommon 5.2.2 to 5.3.0
- sort specific string collation functions added
- more stringpager manipulations possible
- use of stringlist_t for new fsys exec.
- string inpuit and output for bufpager.

from ucommon 5.2.1 to 5.2.2
- use strcoll for sorting when possible
- common c++ object linking, maps, and ref counted pointers added back
- stringpager supports ordered add and sorting
- directory pager and list type added
- no -L or -I paths in default installs (multi-arch issue)

from ucommon 5.2.0 to 5.2.1
- fixed issue with static linking initialization order
- shell release method

from ucommon 5.1.2 to 5.2.0
- improved shell::detach support and new pdetach utility
- fsys generic basic file operations
- commoncpp file and dso compatibility support added

from ucommon 5.1.1 to 5.1.2
- corrected copyright.  since cc libs were moved to bayonne and commoncpp
  had been added, ALL of ucommon (including commoncpp2) are L-GPL, not just
  the "core" library.
- more standardized manpages

from ucommon 5.1.0 to 5.1.1
- better handling of strerror_r support.

from ucommon 5.0.7 to 5.1.0
- Pollak's suggestion for peek method for queue added to queue, stack, buffer,
  and templates.
- new stringpager class to hold simple expanding tables of strings.
- commoncpp strerror_r fix from list.

from ucommon 5.0.6 to 5.0.7
- use debian move xopen forward patch
- joinable thread self-join does cleanup of run state

from ucommon 5.0.5 to 5.0.6
- generic object save/auto-restore.
- separation of shell::error() from shell::errexit(0,...)
- separation of runtime and non-runtime libs
- disable posix_fadvise if header definitions missing (debian kfreebsd bug)

from ucommon 5.0.4 to 5.0.5
- fix for commoncpp emulation when no direct parent commoncpp thread.
- rename scrub to scrub files to avoid name conflict.